# B_1st_sem

./: .gitignore  B_1.sln  CMakeLists.txt
B_1/: 1.1.cpp  1.2.cpp  1.3.cpp  1.4.cpp  1.5.cpp  1.6.cpp  2.1.1.cpp  2.1.2.cpp  2.2.cpp  2.3.cpp  2.4.cpp  2.5.cpp  2.6.cpp  2.7.cpp  2.cpp  3.1.cpp  3.2.cpp  3.2.not_work.cpp  3.3.cpp  3.4.cpp  3.5.cpp  4.1.cpp  4.2.cpp  4.3.cpp  5.1.cpp  5.2.cpp  5.3.cpp  5.4.cpp  6.1.cpp  6.2.cpp  B_1.sln  B_1.vcxproj  B_1.vcxproj.filters  Functions.cpp  Functions.h  Main.cpp  Source1123.cpp  alternative_2.1.1.cpp  angle1.cpp  temp.cpp
B_1/Debug/: B_1.exe.recipe  vc142.idb
B_1/Debug/B_1.tlog/: B_1.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
B_1/x64/Debug/: B_1.exe.recipe  B_1.ilk  vc142.idb
B_1/x64/Debug/B_1.tlog/: B_1.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: B_1.ilk
